--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Valoriza",
+  "name": "valoriza",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
@@ -13,9 +13,11 @@
   },
   "dependencies": {
     "@types/express": "^4.17.13",
+    "@types/uuid": "^8.3.1",
     "express": "^4.17.1",
     "reflect-metadata": "^0.1.13",
     "sqlite3": "^5.0.2",
-    "typeorm": "^0.2.37"
+    "typeorm": "^0.2.37",
+    "uuid": "^8.3.2"
   }
 }
